--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,10 +10,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Build Docker image and tag as latest
+      - name: Build Docker image and list images
         run: |
           docker build -t hospital-app .
           docker tag hospital-app hospital-app:latest
+          docker image ls
         working-directory: ${{ github.workspace }} # Add this line
 
   push:
@@ -22,6 +23,8 @@ jobs:
     steps:
       - name: Login to Docker Hub
         run: docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" -p "${{ secrets.DOCKERHUB_PASSWORD }}"
+      - name: List Docker images
+        run: docker image ls
       - name: Tag Docker image for Docker Hub
         run: docker tag hospital-app:latest ${{ secrets.DOCKERHUB_USERNAME }}/hospital-app:latest
       - name: Push Docker image to Docker Hub
