--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,33 +5,23 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  build_and_push:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Build Docker image and list images
-        run: |
-          docker build -t hospital-app .
-          docker tag hospital-app hospital-app:latest
-          docker image ls
-        working-directory: ${{ github.workspace }} # Add this line
 
-  push:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/hospital-app:latest .
+
       - name: Login to Docker Hub
         run: docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" -p "${{ secrets.DOCKERHUB_PASSWORD }}"
-      - name: List Docker images
-        run: docker image ls
-      - name: Tag Docker image for Docker Hub
-        run: docker tag hospital-app:latest ${{ secrets.DOCKERHUB_USERNAME }}/hospital-app:latest
+
       - name: Push Docker image to Docker Hub
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/hospital-app:latest
 
   deploy:
-    needs: push
+    needs: build_and_push
     runs-on: ubuntu-latest
     steps:
       - name: SSH and Deploy
